--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,7 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
 }
+.technology{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
